@@ -76,6 +76,8 @@ $_lang['prop_register.mathfield_desc'] = 'If `math` is set as a preHook, the nam
 $_lang['prop_register.mathop1field_desc'] = 'If `math` is set as a preHook, the name of the field for the 1st number in the equation.';
 $_lang['prop_register.mathop2field_desc'] = 'If `math` is set as a preHook, the name of the field for the 2nd number in the equation.';
 $_lang['prop_register.mathoperatorfield_desc'] = 'If `math` is set as a preHook, the name of the field for the operator in the equation.';
+$_lang['prop_register.validatepassword_desc'] = 'Whether or not to validate the sent password when registering. Recommended to leave this Yes unless you are generating your own password in a hook.';
+$_lang['prop_register.generatepassword_desc'] = 'If set to Yes, Register will generate a random password for the user, overwriting any passed password. Useful for automatic generation of passwords.';
 $_lang['opt_register.chunk'] = 'Chunk';
 $_lang['opt_register.file'] = 'File';
 $_lang['opt_register.inline'] = 'Inline';
